<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">No tienes cuenta?,</string>
    <string name="create_here">Crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_create_account">Únete</string>
    <string name="toolbar_title_createaccount">Crear cuenta</string>
    <string name="username_card">Parque</string>
    <string name="first_word_card">Hace</string>
    <string name="time_card_text">12 dias</string>
    <string name="like_number_card">60</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Inicio</string>
    <string name="search">Buscar</string>
    <string name="profile">Yo</string>
    <string name="secondWordDetail">Me gusta</string>
    <string name="titleImageDetail">\"Todo copas en la playa\"</string>
    <string name="lorem">asdadsasdasdasalkjdalskjdasldjasldjasldjasdajldasjdlasjdlasdjaldjalksdjlasjdlajdladjslakdsjsaldjasdsaas</string>
    <string name="username_profile">Diana Melgarejo</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="hint_search">Search</string>
    <string name="toastLogin">No puede dejar el usuario o contraseña vacíos</string>
    <string name="toastLoginError">Ha ocurrido un error. </string>
    <string name="hint_title">Titulo</string>
    <string name="hint_description">Descripcion</string>
    <string name="text_button_create_post">Crear Post</string>
</resources>
